Use Gradle 8.4rc3 and JDK 21